Table of Contents p.1

--- a/Documentation Notebook.ipynb
+++ b/Documentation Notebook.ipynb
@@ -51,6 +51,33 @@
     "\n",
     "Instructions to install the applications to code the entire automation process"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computer Setup for Automation\n",
+    "\n",
+    "start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vscode Directory Setup\n",
+    "\n",
+    "Setting up vscode in an organized manner to perform transformations in an organized way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving Documentation Notebook as a PDF\n",
+    "\n",
+    "saving as pdf for easy viewing of instructions"
+   ]
   }
  ],
  "metadata": {
