replaced (A) and reloaded

--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +134,20 @@
     "    for column_letter in columns_to_format:\n",
     "        for cell in adjusted_sheet[column_letter]:\n",
     "            cell.style = Decimal_Number_Style\n",
+    "\n",
+    "    adjusted_workbook.save(merged_file_path)\n",
+    "    adjusted_workbook.close()\n",
+    "\n",
+    "    adjusted_workbook = openpyxl.load_workbook(merged_file_path)\n",
+    "    adjusted_sheet = adjusted_workbook.active\n",
+    "\n",
+    "    # Iterate through rows and columns in the worksheet\n",
+    "    for row in adjusted_sheet.iter_rows():\n",
+    "        for cell in row:\n",
+    "            # Check if the cell value contains \"(A)\"\n",
+    "            if \"(A)\" in str(cell.value):\n",
+    "                # Replace \"(A)\" with a space\n",
+    "                cell.value = cell.value.replace(\" (A)\", \"\")\n",
     "\n",
     "    adjusted_workbook.save(merged_file_path)\n",
     "    adjusted_workbook.close()\n",
