xls to xlsx conversions

--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -2,6 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Specify the folder path where .xls files are located\n",
+    "folder_path = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\"\n",
+    "\n",
+    "# Create a dictionary to map report names to their respective output folders\n",
+    "report_folders = {\n",
+    "    \"PerformanceStats\": \"Performance Stats\",\n",
+    "    \"SalesTransactions\": \"Sales Transactions\",\n",
+    "    \"ServiceCategoryPerformance\": \"Service Category Performance\",\n",
+    "    \"StaffPerformanceOverview\": \"Staff Performance Overview/Individual Reports\",\n",
+    "    \"StaffTips\": \"Staff Tips\",\n",
+    "    \"StaffUtilization\": \"Staff Utilization\"\n",
+    "    # Add more report names and output folders as needed\n",
+    "}\n",
+    "\n",
+    "# Loop through the files in the folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".xls\"):\n",
+    "        # Determine the report name based on the filename (use the base filename)\n",
+    "        report_name = os.path.splitext(filename)[0]\n",
+    "\n",
+    "        # Check if the report name is in the report_folders dictionary\n",
+    "        if report_name in report_folders:\n",
+    "            output_folder = report_folders[report_name]\n",
+    "        else:\n",
+    "            print(f\"No output folder specified for '{report_name}'. Skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Construct the full path to the input file and the output file\n",
+    "        input_file_path = os.path.join(folder_path, filename)\n",
+    "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
+    "\n",
+    "        # Load the .xls file\n",
+    "        xls_workbook = load_workbook(filename=input_file_path, read_only=True, data_only=True)\n",
+    "        \n",
+    "        # Create a new .xlsx workbook\n",
+    "        xlsx_workbook = Workbook()\n",
+    "\n",
+    "        # Copy the sheets from .xls to .xlsx\n",
+    "        for sheet_name in xls_workbook.sheetnames:\n",
+    "            xls_sheet = xls_workbook[sheet_name]\n",
+    "            xlsx_sheet = xlsx_workbook.create_sheet(title=sheet_name)\n",
+    "            \n",
+    "            for row in xls_sheet.iter_rows(values_only=True):\n",
+    "                xlsx_sheet.append(row)\n",
+    "\n",
+    "        # Save the .xlsx file to the specified output folder (including subfolders)\n",
+    "        if not os.path.exists(output_folder):\n",
+    "            os.makedirs(output_folder)\n",
+    "        \n",
+    "        xlsx_workbook.save(filename=output_file_path)\n",
+    "\n",
+    "        print(f\"Converted {filename} to {output_file_path} and saved in {output_folder}\")\n",
+    "\n",
+    "print(\"Conversion complete.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
