--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -2,21 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidFileException",
-     "evalue": "openpyxl does not support the old .xls file format, please use xlrd to read this file, or convert it to the more recent .xlsx file format.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidFileException\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Code For Automation.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nakqi/Downloads/Programming/Reporting%20Automation/Reporting-Automation/Code%20For%20Automation.ipynb#W1sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m output_file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(output_folder, filename\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m.xls\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m.xlsx\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nakqi/Downloads/Programming/Reporting%20Automation/Reporting-Automation/Code%20For%20Automation.ipynb#W1sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39m# Load the .xls file\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nakqi/Downloads/Programming/Reporting%20Automation/Reporting-Automation/Code%20For%20Automation.ipynb#W1sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m xls_workbook \u001b[39m=\u001b[39m load_workbook(filename\u001b[39m=\u001b[39;49minput_file_path, read_only\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, data_only\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nakqi/Downloads/Programming/Reporting%20Automation/Reporting-Automation/Code%20For%20Automation.ipynb#W1sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39m# Create a new .xlsx workbook\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nakqi/Downloads/Programming/Reporting%20Automation/Reporting-Automation/Code%20For%20Automation.ipynb#W1sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m xlsx_workbook \u001b[39m=\u001b[39m Workbook()\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\openpyxl\\reader\\excel.py:344\u001b[0m, in \u001b[0;36mload_workbook\u001b[1;34m(filename, read_only, keep_vba, data_only, keep_links, rich_text)\u001b[0m\n\u001b[0;32m    314\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_workbook\u001b[39m(filename, read_only\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, keep_vba\u001b[39m=\u001b[39mKEEP_VBA,\n\u001b[0;32m    315\u001b[0m                   data_only\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, keep_links\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, rich_text\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m    316\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Open the given filename and return the workbook\u001b[39;00m\n\u001b[0;32m    317\u001b[0m \n\u001b[0;32m    318\u001b[0m \u001b[39m    :param filename: the path to open or a file-like object\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    342\u001b[0m \n\u001b[0;32m    343\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 344\u001b[0m     reader \u001b[39m=\u001b[39m ExcelReader(filename, read_only, keep_vba,\n\u001b[0;32m    345\u001b[0m                          data_only, keep_links, rich_text)\n\u001b[0;32m    346\u001b[0m     reader\u001b[39m.\u001b[39mread()\n\u001b[0;32m    347\u001b[0m     \u001b[39mreturn\u001b[39;00m reader\u001b[39m.\u001b[39mwb\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\openpyxl\\reader\\excel.py:123\u001b[0m, in \u001b[0;36mExcelReader.__init__\u001b[1;34m(self, fn, read_only, keep_vba, data_only, keep_links, rich_text)\u001b[0m\n\u001b[0;32m    121\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, fn, read_only\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, keep_vba\u001b[39m=\u001b[39mKEEP_VBA,\n\u001b[0;32m    122\u001b[0m              data_only\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, keep_links\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, rich_text\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m--> 123\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39marchive \u001b[39m=\u001b[39m _validate_archive(fn)\n\u001b[0;32m    124\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalid_files \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39marchive\u001b[39m.\u001b[39mnamelist()\n\u001b[0;32m    125\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread_only \u001b[39m=\u001b[39m read_only\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\openpyxl\\reader\\excel.py:93\u001b[0m, in \u001b[0;36m_validate_archive\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     87\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     88\u001b[0m             msg \u001b[39m=\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mopenpyxl does not support \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m file format, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     89\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39mplease check you can open \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     90\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39mit with Excel first. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     91\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39mSupported formats are: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m) \u001b[39m%\u001b[39m (file_format,\n\u001b[0;32m     92\u001b[0m                                                    \u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(SUPPORTED_FORMATS))\n\u001b[1;32m---> 93\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidFileException(msg)\n\u001b[0;32m     95\u001b[0m archive \u001b[39m=\u001b[39m ZipFile(filename, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     96\u001b[0m \u001b[39mreturn\u001b[39;00m archive\n",
-      "\u001b[1;31mInvalidFileException\u001b[0m: openpyxl does not support the old .xls file format, please use xlrd to read this file, or convert it to the more recent .xlsx file format."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted PerformanceStatsSM12-01-22.xls to Performance Stats\\PerformanceStatsSM12-01-22.xlsx and saved in Performance Stats\n",
+      "Conversion complete.\n"
      ]
     }
    ],
@@ -67,6 +61,7 @@
     "\n",
     "        # Construct the full path to the input file and the output file\n",
     "        input_file_path = os.path.join(folder_path, filename)\n",
+    "        output_folder_path = os.path.join(folder_path, output_folder)  # Construct the full path to the output folder\n",
     "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
     "\n",
     "        # Load the .xls file using xlrd\n",
@@ -104,6 +99,7 @@
     "import openpyxl\n",
     "import os\n",
     "import re\n",
+    "\n",
     "\n",
     "def read_data(sheet):\n",
     "    # Find the last row with data in column A\n",
@@ -412,6 +408,95 @@
     "        spoNH_path = os.path.join(reports_folder, batch[1])\n",
     "        spo_adjustment(spoCR_path, spoNH_path)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted PerformanceStatsSM12-01-22.xls to Performance Stats\\PerformanceStatsSM12-01-22.xlsx and saved in Performance Stats\n",
+      "Conversion complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "import xlrd\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Specify the folder path where .xls files are located\n",
+    "folder_path = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\"\n",
+    "\n",
+    "# Create a dictionary to map report names to their respective output folders\n",
+    "report_folders = {\n",
+    "    \"PerformanceStats\": \"Performance Stats\",\n",
+    "    \"SalesTransactions\": \"Sales Transactions\",\n",
+    "    \"ServiceCategoryPerformance\": \"Service Category Performance\",\n",
+    "    \"StaffPerformanceOverview\": \"Staff Performance Overview/Individual Reports\",\n",
+    "    \"StaffTips\": \"Staff Tips\",\n",
+    "    \"StaffUtilization\": \"Staff Utilization\"\n",
+    "    # Add more report names and output folders as needed\n",
+    "}\n",
+    "\n",
+    "# Loop through the files in the folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".xls\"):\n",
+    "        # Determine the report name based on the filename (use the base filename)\n",
+    "        report_name = None\n",
+    "\n",
+    "        # Iterate through the keys in the report_folders dictionary\n",
+    "        for key in report_folders.keys():\n",
+    "            if key in filename:\n",
+    "                report_name = key\n",
+    "                break\n",
+    "\n",
+    "        if report_name is None:\n",
+    "            print(f\"No report name found in '{filename}'. Skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Check if the report name is in the report_folders dictionary\n",
+    "        if report_name in report_folders:\n",
+    "            output_folder = report_folders[report_name]\n",
+    "        else:\n",
+    "            print(f\"No output folder specified for '{report_name}'. Skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Construct the full path to the input file and the output file\n",
+    "        input_file_path = os.path.join(folder_path, filename)\n",
+    "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
+    "\n",
+    "        # Load the .xls file using xlrd\n",
+    "        xls_workbook = xlrd.open_workbook(input_file_path, on_demand=True)\n",
+    "\n",
+    "        # Create a new .xlsx workbook\n",
+    "        xlsx_workbook = Workbook()\n",
+    "\n",
+    "        # Copy the sheets from .xls to .xlsx\n",
+    "        for sheet_name in xls_workbook.sheet_names():\n",
+    "            xls_sheet = xls_workbook.sheet_by_name(sheet_name)\n",
+    "            xlsx_sheet = xlsx_workbook.create_sheet(title=sheet_name)\n",
+    "\n",
+    "            for row_idx in range(xls_sheet.nrows):\n",
+    "                row_data = xls_sheet.row_values(row_idx)\n",
+    "                xlsx_sheet.append(row_data)\n",
+    "\n",
+    "        # Save the .xlsx file to the specified output folder (including subfolders)\n",
+    "        if not os.path.exists(output_folder):\n",
+    "            os.makedirs(output_folder)\n",
+    "\n",
+    "        xlsx_workbook.save(filename=output_file_path)\n",
+    "\n",
+    "        print(f\"Converted {filename} to {output_file_path} and saved in {output_folder}\")\n",
+    "\n",
+    "print(\"Conversion complete.\")\n"
    ]
   }
  ],
