conversion xls folder & code created properly

--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -2,37 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted PerformanceStatsSM12-01-22.xls to Performance Stats\\PerformanceStatsSM12-01-22.xlsx and saved in Performance Stats\n",
+      "Converted PerformanceStatsSM12-01-22.xls to C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Performance Stats\\PerformanceStatsSM12-01-22.xlsx and saved in C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Performance Stats\n",
       "Conversion complete.\n"
      ]
     }
    ],
    "source": [
-    "import openpyxl\n",
-    "import xlrd\n",
-    "from openpyxl import Workbook\n",
-    "from openpyxl import load_workbook\n",
+    "import pandas as pd\n",
     "import os\n",
-    "import re\n",
     "\n",
     "# Specify the folder path where .xls files are located\n",
     "folder_path = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\"\n",
     "\n",
     "# Create a dictionary to map report names to their respective output folders\n",
     "report_folders = {\n",
-    "    \"PerformanceStats\": \"Performance Stats\",\n",
-    "    \"SalesTransactions\": \"Sales Transactions\",\n",
-    "    \"ServiceCategoryPerformance\": \"Service Category Performance\",\n",
-    "    \"StaffPerformanceOverview\": \"Staff Performance Overview/Individual Reports\",\n",
-    "    \"StaffTips\": \"Staff Tips\",\n",
-    "    \"StaffUtilization\": \"Staff Utilization\"\n",
+    "    \"PerformanceStats\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Performance Stats\",\n",
+    "    \"SalesTransactions\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Sales Transactions\",\n",
+    "    \"ServiceCategoryPerformance\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Service Category Performance\",\n",
+    "    \"StaffPerformanceOverview\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Staff Performance Overview\\Individual Reports\",\n",
+    "    \"StaffTips\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Staff Tips\",\n",
+    "    \"StaffUtilization\": r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\Staff Utilization\"\n",
     "    # Add more report names and output folders as needed\n",
     "}\n",
     "\n",
@@ -61,29 +57,11 @@
     "\n",
     "        # Construct the full path to the input file and the output file\n",
     "        input_file_path = os.path.join(folder_path, filename)\n",
-    "        output_folder_path = os.path.join(folder_path, output_folder)  # Construct the full path to the output folder\n",
     "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
     "\n",
-    "        # Load the .xls file using xlrd\n",
-    "        xls_workbook = xlrd.open_workbook(input_file_path, on_demand=True)\n",
-    "\n",
-    "        # Create a new .xlsx workbook\n",
-    "        xlsx_workbook = Workbook()\n",
-    "\n",
-    "        # Copy the sheets from .xls to .xlsx\n",
-    "        for sheet_name in xls_workbook.sheet_names():\n",
-    "            xls_sheet = xls_workbook.sheet_by_name(sheet_name)\n",
-    "            xlsx_sheet = xlsx_workbook.create_sheet(title=sheet_name)\n",
-    "\n",
-    "            for row_idx in range(xls_sheet.nrows):\n",
-    "                row_data = xls_sheet.row_values(row_idx)\n",
-    "                xlsx_sheet.append(row_data)\n",
-    "\n",
-    "        # Save the .xlsx file to the specified output folder (including subfolders)\n",
-    "        if not os.path.exists(output_folder):\n",
-    "            os.makedirs(output_folder)\n",
-    "\n",
-    "        xlsx_workbook.save(filename=output_file_path)\n",
+    "        # Read the .xls file using pandas and save it as .xlsx\n",
+    "        df = pd.read_excel(input_file_path)\n",
+    "        df.to_excel(output_file_path, index=False)\n",
     "\n",
     "        print(f\"Converted {filename} to {output_file_path} and saved in {output_folder}\")\n",
     "\n",
@@ -99,7 +77,6 @@
     "import openpyxl\n",
     "import os\n",
     "import re\n",
-    "\n",
     "\n",
     "def read_data(sheet):\n",
     "    # Find the last row with data in column A\n",
