correct xls conversion code

--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15,8 +22,14 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# read files in 'xls conversion' folder and save as an xlsx file in their necessary folder\n",
+    "\n",
+    "import openpyxl\n",
+    "import xlrd\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
     "import os\n",
+    "import re\n",
     "\n",
     "# Specify the folder path where .xls files are located\n",
     "folder_path = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\"\n",
@@ -50,7 +63,14 @@
     "\n",
     "        # Check if the report name is in the report_folders dictionary\n",
     "        if report_name in report_folders:\n",
-    "            output_folder = report_folders[report_name]\n",
+    "            output_folder = os.path.join(folder_path, report_folders[report_name])\n",
+    "        else:\n",
+    "            print(f\"No output folder specified for '{report_name}'. Skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Check if the report name is in the report_folders dictionary\n",
+    "        if report_name in report_folders:\n",
+    "            output_folder = os.path.join(folder_path, report_folders[report_name])\n",
     "        else:\n",
     "            print(f\"No output folder specified for '{report_name}'. Skipping.\")\n",
     "            continue\n",
@@ -59,9 +79,30 @@
     "        input_file_path = os.path.join(folder_path, filename)\n",
     "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
     "\n",
-    "        # Read the .xls file using pandas and save it as .xlsx\n",
-    "        df = pd.read_excel(input_file_path)\n",
-    "        df.to_excel(output_file_path, index=False)\n",
+    "        # Load the .xls file using xlrd\n",
+    "        xls_workbook = xlrd.open_workbook(input_file_path, on_demand=True)\n",
+    "\n",
+    "        # Create a new .xlsx workbook\n",
+    "        xlsx_workbook = Workbook()\n",
+    "\n",
+    "        # Remove the default sheet created by openpyxl\n",
+    "        default_sheet = xlsx_workbook.active\n",
+    "        xlsx_workbook.remove(default_sheet)\n",
+    "\n",
+    "        # Copy the sheets from .xls to .xlsx\n",
+    "        for sheet_name in xls_workbook.sheet_names():\n",
+    "            xls_sheet = xls_workbook.sheet_by_name(sheet_name)\n",
+    "            xlsx_sheet = xlsx_workbook.create_sheet(title=sheet_name)\n",
+    "\n",
+    "            for row_idx in range(xls_sheet.nrows):\n",
+    "                row_data = xls_sheet.row_values(row_idx)\n",
+    "                xlsx_sheet.append(row_data)\n",
+    "\n",
+    "        # Save the .xlsx file to the specified output folder (including subfolders)\n",
+    "        if not os.path.exists(output_folder):\n",
+    "            os.makedirs(output_folder)\n",
+    "\n",
+    "        xlsx_workbook.save(filename=output_file_path)\n",
     "\n",
     "        print(f\"Converted {filename} to {output_file_path} and saved in {output_folder}\")\n",
     "\n",
@@ -385,95 +426,6 @@
     "        spoNH_path = os.path.join(reports_folder, batch[1])\n",
     "        spo_adjustment(spoCR_path, spoNH_path)\n",
     "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted PerformanceStatsSM12-01-22.xls to Performance Stats\\PerformanceStatsSM12-01-22.xlsx and saved in Performance Stats\n",
-      "Conversion complete.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import openpyxl\n",
-    "import xlrd\n",
-    "from openpyxl import Workbook\n",
-    "from openpyxl import load_workbook\n",
-    "import os\n",
-    "import re\n",
-    "\n",
-    "# Specify the folder path where .xls files are located\n",
-    "folder_path = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\"\n",
-    "\n",
-    "# Create a dictionary to map report names to their respective output folders\n",
-    "report_folders = {\n",
-    "    \"PerformanceStats\": \"Performance Stats\",\n",
-    "    \"SalesTransactions\": \"Sales Transactions\",\n",
-    "    \"ServiceCategoryPerformance\": \"Service Category Performance\",\n",
-    "    \"StaffPerformanceOverview\": \"Staff Performance Overview/Individual Reports\",\n",
-    "    \"StaffTips\": \"Staff Tips\",\n",
-    "    \"StaffUtilization\": \"Staff Utilization\"\n",
-    "    # Add more report names and output folders as needed\n",
-    "}\n",
-    "\n",
-    "# Loop through the files in the folder\n",
-    "for filename in os.listdir(folder_path):\n",
-    "    if filename.endswith(\".xls\"):\n",
-    "        # Determine the report name based on the filename (use the base filename)\n",
-    "        report_name = None\n",
-    "\n",
-    "        # Iterate through the keys in the report_folders dictionary\n",
-    "        for key in report_folders.keys():\n",
-    "            if key in filename:\n",
-    "                report_name = key\n",
-    "                break\n",
-    "\n",
-    "        if report_name is None:\n",
-    "            print(f\"No report name found in '{filename}'. Skipping.\")\n",
-    "            continue\n",
-    "\n",
-    "        # Check if the report name is in the report_folders dictionary\n",
-    "        if report_name in report_folders:\n",
-    "            output_folder = report_folders[report_name]\n",
-    "        else:\n",
-    "            print(f\"No output folder specified for '{report_name}'. Skipping.\")\n",
-    "            continue\n",
-    "\n",
-    "        # Construct the full path to the input file and the output file\n",
-    "        input_file_path = os.path.join(folder_path, filename)\n",
-    "        output_file_path = os.path.join(output_folder, filename.replace(\".xls\", \".xlsx\"))\n",
-    "\n",
-    "        # Load the .xls file using xlrd\n",
-    "        xls_workbook = xlrd.open_workbook(input_file_path, on_demand=True)\n",
-    "\n",
-    "        # Create a new .xlsx workbook\n",
-    "        xlsx_workbook = Workbook()\n",
-    "\n",
-    "        # Copy the sheets from .xls to .xlsx\n",
-    "        for sheet_name in xls_workbook.sheet_names():\n",
-    "            xls_sheet = xls_workbook.sheet_by_name(sheet_name)\n",
-    "            xlsx_sheet = xlsx_workbook.create_sheet(title=sheet_name)\n",
-    "\n",
-    "            for row_idx in range(xls_sheet.nrows):\n",
-    "                row_data = xls_sheet.row_values(row_idx)\n",
-    "                xlsx_sheet.append(row_data)\n",
-    "\n",
-    "        # Save the .xlsx file to the specified output folder (including subfolders)\n",
-    "        if not os.path.exists(output_folder):\n",
-    "            os.makedirs(output_folder)\n",
-    "\n",
-    "        xlsx_workbook.save(filename=output_file_path)\n",
-    "\n",
-    "        print(f\"Converted {filename} to {output_file_path} and saved in {output_folder}\")\n",
-    "\n",
-    "print(\"Conversion complete.\")\n"
    ]
   }
  ],
