Start of Weekly report automation

--- a/Code For Automation.ipynb
+++ b/Code For Automation.ipynb
@@ -5,7 +5,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reading if folder has all reports necessary to run all transformations\n",
+    "import os\n",
+    "\n",
+    "# Directory where the weekly reports are stored\n",
+    "weekly_report_directory = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\\Weekly Reports\"\n",
+    "# Directory where the monthly reports are stored\n",
+    "monthly_report_directory = r\"C:\\Users\\nakqi\\Downloads\\Programming\\Reporting Automation\\Reporting-Automation\\Reports Folder\\xls conversion\\Monthly Reports\"\n",
+    "\n",
+    "# List of required weekly report filenames\n",
+    "required_weekly_reports = [\"Report1.xlsx\", \"Report2.xlsx\", \"BatchReport1.xlsx\", \"BatchReport2.xlsx\"]\n",
+    "\n",
+    "# List of required monthly report filenames\n",
+    "required_monthly_reports = [\"MonthlyReport1.xlsx\", \"MonthlyReport2.xlsx\"]\n",
+    "\n",
+    "# Get the list of files in the weekly report directory\n",
+    "files_in_weekly_directory = os.listdir(weekly_report_directory)\n",
+    "\n",
+    "# Get the list of files in the monthly report directory\n",
+    "files_in_monthly_directory = os.listdir(monthly_report_directory)\n",
+    "\n",
+    "# Check if all required weekly reports are present\n",
+    "missing_weekly_reports = [report for report in required_weekly_reports if report not in files_in_weekly_directory]\n",
+    "\n",
+    "# Check if all required monthly reports are present\n",
+    "missing_monthly_reports = [report for report in required_monthly_reports if report not in files_in_monthly_directory]\n",
+    "\n",
+    "if missing_weekly_reports:\n",
+    "    print(\"Missing weekly reports:\", missing_weekly_reports)\n",
+    "else:\n",
+    "    print(\"All required weekly reports are present.\")\n",
+    "\n",
+    "if missing_monthly_reports:\n",
+    "    print(\"Missing monthly reports:\", missing_monthly_reports)\n",
+    "else:\n",
+    "    print(\"All required monthly reports are present.\")\n"
+   ]
   },
   {
    "cell_type": "code",
